Fixed the scroll issue with the fade in that caused overlap on the header.

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ html, body {
 }
 
 .header {
+    z-index: 10;
     display: flex;
     position: fixed;
     top: 0;
@@ -27,6 +28,7 @@ html, body {
     padding-top: 10px;
     padding-left: 45px;
     margin-bottom: -10px;
+    animation: fadeIn 4s;
 }
 
 .menu-format {
@@ -36,6 +38,7 @@ html, body {
     display:flex;
     justify-content: center;
     justify-content: space-around;
+    animation: fadeIn 4s;
 }
 
 .button-style {
@@ -86,10 +89,9 @@ u {
     /* margin-top: 20%; */
     margin-left: auto;
     margin-right: auto;
-    background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
-    animation: fadeIn 5s;
+    animation: fadeIn 4s;
 }
 
 /* Text fade in animation */
@@ -167,7 +169,6 @@ ul li::before {
     margin-top: 200px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
 }
@@ -228,7 +229,6 @@ ul li::before {
     margin-top: 250px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
 }
@@ -259,7 +259,6 @@ ul li::before {
     margin-right: auto;
     margin-bottom: 50px;
     border-radius: 10px;
-    background-color: #2c4c3b;
     font-family: Montserrat;
     color: #90EE90;
 }
